--- a/AiLab/templates/messenger_chat.html
+++ b/AiLab/templates/messenger_chat.html
@@ -17,7 +17,7 @@
         {% for message in messages %}
         <div
             class="message {% if message.sender_id == current_user.id %}message-sent{% else %}message-received{% endif %}">
-            {{ message.text }}
+            {{ message.text|safe }}
             <div class="message-time" data-timestamp="{{ message.timestamp.isoformat() }}"></div>
         </div>
         {% endfor %}
