--- a/AiLab/static/css/messenger.css
+++ b/AiLab/static/css/messenger.css
@@ -343,11 +343,6 @@
     height: 23px;
 }
 
-.emoji-trigger img {
-    width: 25px;
-    height: 25px;
-}
-
 .send-button {
     background: none;
     border: none;
@@ -365,65 +360,32 @@
 .hidden {
     display: none;
 }
+
+
+.message-status {
+    margin-left: 5px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.single-check {
+    color: #888; /* Серый цвет для одной галочки */
+    font-size: 12px;
+}
+
+.double-check {
+    color: #4CAF50; /* Зелёный цвет для двух галочек, как в Telegram */
+    font-size: 12px;
+}
+
+.message-second-data {
+    display: inline-flex;
+}
+
 .message-time {
-     font-size: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    font-size: 12px;
+    color: #999;
 }
-
-/* Стили для кнопки и пикера */
-.emoji-trigger {
-    background: none;
-    border: none;
-    font-size: 24px;
-    cursor: pointer;
-    padding: 8px 4px;
-    opacity: 0.7;
-    transition: opacity 0.2s;
-    align-self: flex-end; /* Выравниваем по низу с полем ввода */
-  }
-  
-  .emoji-trigger:hover {
-    opacity: 1;
-  }
-
-  .emoji-picker {
-    position: absolute;
-    bottom: 60px;
-    left: 10px;
-    width: 350px;
-    height: 400px;
-    display: none; /* По умолчанию скрыт */
-    z-index: 1000;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-    opacity: 0;
-    transform: translateY(10px);
-    transition: opacity 0.2s, transform 0.2s;
-    /* Основные цвета */
-    --background: var(--messenger-input-bg);
-    --border-color: var(--messenger-border);
-    --color: var(--messenger-text);
-    
-    /* Заголовки категорий */
-    --category-name-background-color: var(--messenger-header-bg);
-    --category-name-font-color: #666;
-    
-    /* Кнопки */
-    --button-active-background: var(--messenger-bg);
-    --button-hover-background: var(--messenger-header-bg);
-    
-    /* Скроллбар */
-    --scrollbar-thumb-color: var(--messenger-bg);
-    --scrollbar-track-color: var(--messenger-header-bg);
-    /* Ширина скроллбара */
-    --scrollbar-width: 6px;
-    
-    /* Скругление углов */
-    --scrollbar-border-radius: 3px;
-}
-  
-  /* Показываем пикер при наличии класса .visible */
-  .emoji-picker.visible {
-    display: block;
-    opacity: 1;
-    transform: translateY(0);
-  }
- 
