--- a/AiLab/templates/base.html
+++ b/AiLab/templates/base.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/messenger.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/github.min.css">
-    <script type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.min.js"></script>
-
     
 
     {% block styles %}
@@ -53,7 +51,7 @@
     {% block content %}
     {% endblock %}
 
-        <div class="messenger-container" id="messenger-container">
+        <div class="messenger-container" id="messenger-container" data-user-id="{{ current_user.id | default(0, true) }}">
             <div class="messenger-header" id="messenger-header">
                 <div class="search-container">
                     <input type="text" id="contact-search" placeholder="Поиск контактов..." class="search-input">
@@ -61,6 +59,9 @@
                 </div>
             </div>
             <div class="messenger-content" id="messenger-content"></div>
+        </div>
+        <div id="contextMenu" class="context-menu">
+            <ul id="contextMenuList"></ul>
         </div>
     
     
