--- a/AiLab/templates/base.html
+++ b/AiLab/templates/base.html
@@ -21,31 +21,31 @@
 <body>
     <div class="header">
         {% if current_endpoint != 'main_bp.ide' %}
-        <div class="ide-link"><a href="{{ url_for('main_bp.ide') }}"><img src="{{ url_for('static', filename='img/icons/ide.svg') }}" alt="IDE"></a></div>
+        <div class="ide-link"><a href="{{ url_for('main_bp.ide') }}"><img class="icon-header" src="{{ url_for('static', filename='img/icons/ide.svg') }}" alt="IDE"></a></div>
         {% endif %}
         <div class="center-pos">
             <div class="logo-block">
-                <img src="{{ url_for('static', filename='img/logo.png') }}" class="logo-style">
+                <img src="{{ url_for('static', filename='img/logo.png') }}" class="logo-style icon-header">
                 <div class="header-title">AiLab WEB</div>
             </div>
             {% if current_endpoint != 'main_bp.profile' %}
             <a href="{{ url_for('main_bp.profile', id=current_user.id) }}" class="profile-icon">
-                <img src="{{ url_for('static', filename='uploads/' + current_user.profile.profile_photo) }}" alt="Профиль">
+                <img src="{{ url_for('static', filename='uploads/' + current_user.profile.profile_photo) }}" alt="Профиль" class="icon-header">
             </a>    
             {% endif %}
             {% if current_endpoint == 'main_bp.profile' and (id is not defined or id != current_user.id) %}
             <a href="{{ url_for('main_bp.profile', id=current_user.id) }}" class="profile-icon">
-                <img src="{{ url_for('static', filename='uploads/' + current_user.profile.profile_photo) }}" alt="Профиль">
+                <img src="{{ url_for('static', filename='uploads/' + current_user.profile.profile_photo) }}" alt="Профиль" class="icon-header">
             </a>
             {% endif %}
         </div>
         
         <div class="messenger-icon">
             <span class="badge hidden" id="unread-count">0</span>
-            <img src="{{ url_for('static', filename='img/icons/mess.svg') }}" alt="messanger">
+            <img src="{{ url_for('static', filename='img/icons/mess.svg') }}" alt="messanger" class="icon-header">
         </div>
 
-        <div class="night-mode"><img src="{{ url_for('static', filename='img/icons/sun.svg') }}" alt="sun"></div>
+        <div class="night-mode"><img src="{{ url_for('static', filename='img/icons/sun.svg') }}" alt="sun" class="icon-header"></div>
     </div>
 
     {% block content %}
