--- a/AiLab/templates/base.html
+++ b/AiLab/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/messenger.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/github.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.min.js"></script>
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     {% block styles %}
     {% endblock %}
@@ -79,6 +79,7 @@
     </script>
     <script src="{{ url_for('static', filename='js/base.js') }}"></script>
     <script src="{{ url_for('static', filename='js/messenger.js') }}"></script>
+    
     {% block scripts %}
     {% endblock %}
     <!-- В base.html перед закрывающим </body> -->
