--- a/AiLab/app/base/templates/base.html
+++ b/AiLab/app/base/templates/base.html
@@ -41,7 +41,7 @@
             {% endif %}
         </div>
         {% if current_endpoint == 'ide_blueprint.ide' %}
-        <div class="filetree-icon">
+        <div class="filetree-icon" data-user-id="{{ current_user.id }}">
             <img src="{{ url_for('static', filename='img/icons/mess.svg') }}" alt="filetree" class="icon-header">
         </div>
         {% endif %}
