--- a/AiLab/app/base/static/css/filetree.css
+++ b/AiLab/app/base/static/css/filetree.css
@@ -36,11 +36,14 @@
     width: 22vw;
     background-color: var(--filetree-bg);
     border-right: 1px solid var(--filetree-border);
-    transform: translateX(-100%);
-    transition: transform 0.3s ease;
+    transform: translateX(-150%);
+    transition: 0.5s;
     z-index: 1000;
     display: flex;
     flex-direction: column;
+    margin: 2vw 0vw 2.7vw 2vw;
+    border-radius: 0.5vw;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 .filetree-container.open {
@@ -52,8 +55,9 @@
     overflow-y: auto;
     right: 0;
     bottom: 0;
-    width: 100%;
+    width: 21vw;
     height: 100%; /* Растягиваем на всю высоту контейнера */
+    margin: 0.5vw;
 }
 
 .close-filetree-button {
@@ -73,6 +77,7 @@ ul {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, sans-serif;
     font-size: 14px;
+    border-radius: 0.5vw;
   }
   
   li {
@@ -82,7 +87,9 @@ ul {
     display: block;
     position: relative; /* Контекст для абсолютного позиционирования стрелок и иконок */
     min-height: 20px; /* Минимальная высота для стабильного выравнивания */
-  }
+    
+    border-radius: 0.5vw;
+}
   
   li::before {
     content: '';
