--- a/AiLab/app/base/static/css/messenger.css
+++ b/AiLab/app/base/static/css/messenger.css
@@ -59,16 +59,19 @@
 }
 
 .messenger-container {
+    margin: 2vw 2vw 2.7vw 10vw;
     position: fixed;
     top: var(--header-height);
     right: 0;
     bottom: 0;
+    border-radius: 0.5vw;
     width: 22vw;
     background-color: var(--messenger-bg);
     border-left: 1px solid var(--messenger-border);
-    transform: translateX(100%); /* Скрыто за пределами экрана */
-    transition: transform 0.3s ease;
+    transform: translateX(150%); 
+    transition: 0.5s;
     z-index: 1000;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 .messenger-container.open {
@@ -82,6 +85,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-top-right-radius: 0.5vw;
+    border-top-left-radius: 0.5vw;
 }
 
 
@@ -281,6 +286,7 @@
     position: fixed;
     right: 0;
     bottom: 0;
+    border-radius: 0.5vw;
 }
 
 .messages-container {
@@ -336,6 +342,7 @@
     max-width: 500px;
     box-sizing: border-box;
     align-items: flex-end; /* Выравниваем элементы по нижнему краю */
+    border-radius: 0.5vw;
 }
 
 .input-container img {
