--- a/AiLab/app/base/static/css/ide.css
+++ b/AiLab/app/base/static/css/ide.css
@@ -1,7 +1,7 @@
 :root {
     --background: #fff;
     --color: #424242;
-    --button-background: #d3d3d3;
+    --button-background: #f5f5f5;
     --button-background-hover: #c0bfbf;
     --button-background-active: #858585;
     --border: #ddd;
@@ -9,7 +9,10 @@
     --tab-hover: #c0c0c0;
     --white: white;
     --console-back: #f5f5f5;
-
+    --background--CodeMirror: #f5f5f5;
+    --background-hint: #ededed;
+    --color-hint: #2d8515;
+    --back2-hint: #dddddd;
 }
 
 .dark-mode {
@@ -23,6 +26,10 @@
     --tab-hover: #282828;
     --white: #222;
     --console-back: #2a2a2a;
+    --background--CodeMirror: #2a2a2a;
+    --background-hint: #303139;
+    --color-hint: #ce7070;
+    --back2-hint: #1c1c1c;
 }
 
 /* Общие стили */
@@ -236,6 +243,7 @@ body {
     transition: 0.5s;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
     /* Важно, чтобы padding учитывался в общей ширине */
+    background-color: var(--background--CodeMirror) !important;
 }
 
 .console-close {
@@ -260,6 +268,27 @@ body {
     color: #777;
 }
 
+.CodeMirror-hints {
+    background: var(--back2-hint); /* Цвет фона (например, темный Dracula) */
+    border: 1px solid #44475a; /* Граница */
+    font-family: Consolas, Monaco, monospace;
+    font-size: 14px;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+/* НЕ выбранный текст (обычные элементы) */
+.CodeMirror-hint {
+    color: var(--color); /* Белый цвет текста */
+    padding: 5px;
+}
+
+/* ВЫБРАННЫЙ элемент */
+.CodeMirror-hint-active {
+    background: var(--background-hint) !important; /* Цвет фона при выборе */
+    color: var(--color-hint) !important; /* Зелёный текст */
+    font-weight: bold;
+}
 
 .button {
     padding: 5px 10px;
